Lql/Nimblesite.Lql.Core/Parsing/LqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Lql.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Nimblesite.Lql.Core.Parsing {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class LqlParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, ASC=21, DESC=22, AND=23, OR=24, DISTINCT=25, 
		EXISTS=26, NULL=27, IS=28, NOT=29, IN=30, AS=31, CASE=32, WHEN=33, THEN=34, 
		ELSE=35, END=36, WITH=37, OVER=38, PARTITION=39, ORDER=40, BY=41, COALESCE=42, 
		EXTRACT=43, FROM=44, INTERVAL=45, CURRENT_DATE=46, DATE_TRUNC=47, ON=48, 
		LIKE=49, PARAMETER=50, IDENT=51, INT=52, DECIMAL=53, STRING=54, COMMENT=55, 
		WS=56, ASTERISK=57;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_withStmt = 2, RULE_cteDef = 3, 
		RULE_letStmt = 4, RULE_pipeExpr = 5, RULE_expr = 6, RULE_windowSpec = 7, 
		RULE_partitionClause = 8, RULE_orderClause = 9, RULE_orderByArgList = 10, 
		RULE_orderByArg = 11, RULE_lambdaExpr = 12, RULE_qualifiedIdent = 13, 
		RULE_argList = 14, RULE_arg = 15, RULE_columnAlias = 16, RULE_arithmeticExpr = 17, 
		RULE_arithmeticTerm = 18, RULE_arithmeticFactor = 19, RULE_functionCall = 20, 
		RULE_namedArg = 21, RULE_logicalExpr = 22, RULE_andExpr = 23, RULE_atomicExpr = 24, 
		RULE_comparison = 25, RULE_existsExpr = 26, RULE_nullCheckExpr = 27, RULE_inExpr = 28, 
		RULE_caseExpr = 29, RULE_whenClause = 30, RULE_caseResult = 31, RULE_orderDirection = 32, 
		RULE_comparisonOp = 33;
	public static readonly string[] ruleNames = {
		"program", "statement", "withStmt", "cteDef", "letStmt", "pipeExpr", "expr", 
		"windowSpec", "partitionClause", "orderClause", "orderByArgList", "orderByArg", 
		"lambdaExpr", "qualifiedIdent", "argList", "arg", "columnAlias", "arithmeticExpr", 
		"arithmeticTerm", "arithmeticFactor", "functionCall", "namedArg", "logicalExpr", 
		"andExpr", "atomicExpr", "comparison", "existsExpr", "nullCheckExpr", 
		"inExpr", "caseExpr", "whenClause", "caseResult", "orderDirection", "comparisonOp"
	};

	private static readonly string[] _LiteralNames = {
		null, "','", "'('", "')'", "'let'", "'='", "'|>'", "'fn'", "'=>'", "'.'", 
		"'+'", "'-'", "'||'", "'/'", "'%'", "'!='", "'<>'", "'<'", "'>'", "'<='", 
		"'>='", null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "ASC", "DESC", "AND", 
		"OR", "DISTINCT", "EXISTS", "NULL", "IS", "NOT", "IN", "AS", "CASE", "WHEN", 
		"THEN", "ELSE", "END", "WITH", "OVER", "PARTITION", "ORDER", "BY", "COALESCE", 
		"EXTRACT", "FROM", "INTERVAL", "CURRENT_DATE", "DATE_TRUNC", "ON", "LIKE", 
		"PARAMETER", "IDENT", "INT", "DECIMAL", "STRING", "COMMENT", "WS", "ASTERISK"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Lql.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static LqlParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public LqlParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public LqlParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(LqlParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 179018226921898132L) != 0)) {
				{
				{
				State = 68;
				statement();
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 74;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public WithStmtContext withStmt() {
			return GetRuleContext<WithStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LetStmtContext letStmt() {
			return GetRuleContext<LetStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipeExprContext pipeExpr() {
			return GetRuleContext<PipeExprContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 79;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case WITH:
				EnterOuterAlt(_localctx, 1);
				{
				State = 76;
				withStmt();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				letStmt();
				}
				break;
			case T__1:
			case T__6:
			case CASE:
			case PARAMETER:
			case IDENT:
			case INT:
			case DECIMAL:
			case STRING:
			case ASTERISK:
				EnterOuterAlt(_localctx, 3);
				{
				State = 78;
				pipeExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WithStmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WITH() { return GetToken(LqlParser.WITH, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public CteDefContext[] cteDef() {
			return GetRuleContexts<CteDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CteDefContext cteDef(int i) {
			return GetRuleContext<CteDefContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipeExprContext pipeExpr() {
			return GetRuleContext<PipeExprContext>(0);
		}
		public WithStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_withStmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterWithStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitWithStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWithStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WithStmtContext withStmt() {
		WithStmtContext _localctx = new WithStmtContext(Context, State);
		EnterRule(_localctx, 4, RULE_withStmt);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			Match(WITH);
			State = 82;
			cteDef();
			State = 87;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 83;
				Match(T__0);
				State = 84;
				cteDef();
				}
				}
				State = 89;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 90;
			pipeExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CteDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(LqlParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AS() { return GetToken(LqlParser.AS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PipeExprContext pipeExpr() {
			return GetRuleContext<PipeExprContext>(0);
		}
		public CteDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cteDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterCteDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitCteDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCteDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CteDefContext cteDef() {
		CteDefContext _localctx = new CteDefContext(Context, State);
		EnterRule(_localctx, 6, RULE_cteDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			Match(IDENT);
			State = 93;
			Match(AS);
			State = 94;
			Match(T__1);
			State = 95;
			pipeExpr();
			State = 96;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LetStmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(LqlParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public PipeExprContext pipeExpr() {
			return GetRuleContext<PipeExprContext>(0);
		}
		public LetStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_letStmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterLetStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitLetStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLetStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LetStmtContext letStmt() {
		LetStmtContext _localctx = new LetStmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_letStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(T__3);
			State = 99;
			Match(IDENT);
			State = 100;
			Match(T__4);
			State = 101;
			pipeExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PipeExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public PipeExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pipeExpr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterPipeExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitPipeExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPipeExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PipeExprContext pipeExpr() {
		PipeExprContext _localctx = new PipeExprContext(Context, State);
		EnterRule(_localctx, 10, RULE_pipeExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			expr();
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__5) {
				{
				{
				State = 104;
				Match(T__5);
				State = 105;
				expr();
				}
				}
				State = 110;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(LqlParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OVER() { return GetToken(LqlParser.OVER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public WindowSpecContext windowSpec() {
			return GetRuleContext<WindowSpecContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArgListContext argList() {
			return GetRuleContext<ArgListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipeExprContext pipeExpr() {
			return GetRuleContext<PipeExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public QualifiedIdentContext qualifiedIdent() {
			return GetRuleContext<QualifiedIdentContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LambdaExprContext lambdaExpr() {
			return GetRuleContext<LambdaExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CaseExprContext caseExpr() {
			return GetRuleContext<CaseExprContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(LqlParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DECIMAL() { return GetToken(LqlParser.DECIMAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ASTERISK() { return GetToken(LqlParser.ASTERISK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(LqlParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAMETER() { return GetToken(LqlParser.PARAMETER, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 12, RULE_expr);
		int _la;
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 111;
				Match(IDENT);
				State = 112;
				Match(T__1);
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 179299564526764164L) != 0)) {
					{
					State = 113;
					argList();
					}
				}

				State = 116;
				Match(T__2);
				State = 117;
				Match(OVER);
				State = 118;
				Match(T__1);
				State = 119;
				windowSpec();
				State = 120;
				Match(T__2);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 122;
				Match(IDENT);
				State = 123;
				Match(T__1);
				State = 125;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 179299564526764164L) != 0)) {
					{
					State = 124;
					argList();
					}
				}

				State = 127;
				Match(T__2);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 128;
				Match(IDENT);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 129;
				Match(T__1);
				State = 130;
				pipeExpr();
				State = 131;
				Match(T__2);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 133;
				qualifiedIdent();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 134;
				lambdaExpr();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 135;
				caseExpr();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 136;
				Match(INT);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 137;
				Match(DECIMAL);
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 138;
				Match(ASTERISK);
				}
				break;
			case 11:
				EnterOuterAlt(_localctx, 11);
				{
				State = 139;
				Match(STRING);
				}
				break;
			case 12:
				EnterOuterAlt(_localctx, 12);
				{
				State = 140;
				Match(PARAMETER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class WindowSpecContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PartitionClauseContext partitionClause() {
			return GetRuleContext<PartitionClauseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OrderClauseContext orderClause() {
			return GetRuleContext<OrderClauseContext>(0);
		}
		public WindowSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_windowSpec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.EnterWindowSpec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ILqlListener typedListener = listener as ILqlListener;
			if (typedListener != null) typedListener.ExitWindowSpec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ILqlVisitor<TResult> typedVisitor = visitor as ILqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitWindowSpec(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public WindowSpecContext windowSpec() {
		WindowSpecContext _localctx = new WindowSpecContext(Context, State);
		EnterRule(_localctx, 14, RULE_windowSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==PARTITION) {
				{
				State = 143;
				partitionClause();
				}
			}

			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ORDER) {
				{
				State = 146;
				orderClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
